--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1290,10 +1290,22 @@ table.calendar-table {
 .job-creation-modal {
     width: 500px;
     position: absolute;
-    left: 0;
+    left: -600px;
     top: 0;
     z-index: 1;
+    transition: all 0.3s;
 }
+
+.job-creation-modal.active{
+    left: 0;
+    transition: all 0.3s;
+}
+
+.job-creation-body {
+    height: calc(100dvh - 370px);
+    overflow: auto;
+}
+
 .job-creation-modal .modal-header {
     background-color: #C5E0EE;
 }
