--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1675,6 +1675,89 @@ output {
 }
 /* Ordered Modal End */
 
+.ctbpopup-body {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 500px;
+}
+
+.ctbpopup-body{
+    max-width: 420px;
+    width: 100%;
+    height: 100%;
+    max-height: 500px;
+}
+
+.ctbpopup-body ul.nav{
+box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.32);
+}
+
+.ctbpopup-body .accordion-item{
+    background: linear-gradient(180deg, #0B3E58 6.1%, #FFF 57.09%, #0B3E58 60%, #0B3E58 100%);
+}
+
+.ctbpop-accordian-body{
+    border-color: #0B3E58 !important;
+}
+
+.ctbpopup-body .nav-item .nav-link{
+border-color: #0B3E58 !important;
+color: #0B3E58;
+line-height: normal;
+border-radius: 40px;
+transition: all 0.3s;
+}
+
+.ctbpopup-body .nav-item .nav-link.active,
+.ctbpopup-body .nav-item .nav-link:hover{
+border-color: transparent !important;
+color: #fff;
+background-color: rgb(11, 62, 88);
+transition: all 0.3s;
+}
+
+.ctbpopup-body .nav-item .nav-link:hover{
+background-color: rgb(11 62 88 / 80%);
+}
+
+.ctbpopup-statislist-title{
+width: 120px;
+text-wrap: nowrap; 
+text-overflow: ellipsis;
+overflow: hidden;
+}
+
+.popnotedata{
+max-height: 150px;
+border-color: #707070 !important;
+}
+
+.popnotedata::-webkit-scrollbar{
+width: 0;
+height: 0;
+}
+
+.ctbpopup-statislist{
+width: calc(100% - 36px);
+}
+
+.ctbpopup-statis-img01 {
+width: 30px;
+height: 30px;
+box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.32);
+}
+
+.ctbpopup-statis-img02 {
+width: 16px;
+height: 16px;
+}
+
+.ctblist-ul {
+    height: calc(100vh - 426px);
+    overflow-y: auto;
+}
+
 /* Responsive css start */
 
 @media (max-width: 1650px) {
